src/objects/zqu__ProductRatePlanChargeTier__c.object
<CustomObject>
   
    <fields>
        <fullName>Product_Number__c</fullName>
        <formula>zqu__ProductRatePlanCharge__r.zqu__ProductRatePlan__r.zqu__ZProduct__r.SAPProductMaterialNo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Is_Active__c</fullName>
        <formula>IF(ZRatePlan_Deleted__c=true,false,IF(AND(ZRatePlan_EffectiveStartDate__c &lt;= TODAY(), ZRatePlan_EffectiveEndDate__c &gt;=TODAY()),true,false))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Rate Plan ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZCharge_DefaultQuantity__c</fullName>
        <formula>zqu__ProductRatePlanCharge__r.zqu__DefaultQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZCharge_DefaultQuantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZCharge_Deleted__c</fullName>
        <formula>zqu__ProductRatePlanCharge__r.zqu__Deleted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZCharge_Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZCharge_Discount_Level__c</fullName>
        <formula>TEXT(zqu__ProductRatePlanCharge__r.zqu__Discount_Level__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZCharge_Discount_Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZCharge_ListPrice__c</fullName>
        <formula>zqu__ProductRatePlanCharge__r.zqu__ListPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ZCharge_MaxQuantity__c</fullName>
        <formula>zqu__ProductRatePlanCharge__r.zqu__MaxQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volume Price Max Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZCharge_MinQuantity__c</fullName>
        <formula>zqu__ProductRatePlanCharge__r.zqu__MinQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volume Price Min Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZCharge_Model__c</fullName>
        <formula>TEXT(zqu__ProductRatePlanCharge__r.zqu__Model__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZCharge_Name__c</fullName>
        <formula>zqu__ProductRatePlanCharge__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZCharge_Type__c</fullName>
        <formula>TEXT(zqu__ProductRatePlanCharge__r.zqu__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZCharge_Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZCharge_UOM__c</fullName>
        <formula>zqu__ProductRatePlanCharge__r.zqu__ZUnitOfMeasure__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZCharge_UOM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZCharge_ZuoraId__c</fullName>
        <formula>zqu__ProductRatePlanCharge__r.zqu__ZuoraId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZCharge_ZuoraId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZProduct_Deleted__c</fullName>
        <formula>zqu__ProductRatePlanCharge__r.zqu__ProductRatePlan__r.zqu__ZProduct__r.zqu__Deleted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZProduct_Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZProduct_EffectiveEndDate__c</fullName>
        <formula>zqu__ProductRatePlanCharge__r.zqu__ProductRatePlan__r.zqu__ZProduct__r.zqu__EffectiveEndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZProduct_EffectiveEndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ZProduct_EffectiveStartDate__c</fullName>
        <formula>zqu__ProductRatePlanCharge__r.zqu__ProductRatePlan__r.zqu__ZProduct__r.zqu__EffectiveStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZProduct_EffectiveStartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ZProduct_ZuoraId__c</fullName>
        <formula>zqu__ProductRatePlanCharge__r.zqu__ProductRatePlan__r.zqu__ZProduct__r.zqu__ZuoraId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZProduct_ZuoraId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZRatePlan_Country__c</fullName>
        <formula>TEXT(zqu__ProductRatePlanCharge__r.zqu__ProductRatePlan__r.Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZRatePlan_CouponCode__c</fullName>
        <formula>zqu__ProductRatePlanCharge__r.zqu__ProductRatePlan__r.Couponcode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Coupon Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZRatePlan_CustomerType__c</fullName>
        <formula>TEXT(zqu__ProductRatePlanCharge__r.zqu__ProductRatePlan__r.CustomerType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount CustomerType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZRatePlan_Deleted__c</fullName>
        <formula>zqu__ProductRatePlanCharge__r.zqu__ProductRatePlan__r.zqu__Deleted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZRatePlan_Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZRatePlan_EffectiveEndDate__c</fullName>
        <formula>zqu__ProductRatePlanCharge__r.zqu__ProductRatePlan__r.zqu__EffectiveEndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZRatePlan_EffectiveEndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ZRatePlan_EffectiveStartDate__c</fullName>
        <formula>zqu__ProductRatePlanCharge__r.zqu__ProductRatePlan__r.zqu__EffectiveStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZRatePlan_EffectiveStartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ZRatePlan_IsFreeShipping__c</fullName>
        <formula>TEXT(zqu__ProductRatePlanCharge__r.zqu__ProductRatePlan__r.IsFreeShipping__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Free-Shipping Discount ?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZRatePlan_IsPreSale__c</fullName>
        <formula>TEXT(zqu__ProductRatePlanCharge__r.zqu__ProductRatePlan__r.IsPreSale__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Pre-Sale Discount ?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZRatePlan_Name__c</fullName>
        <formula>zqu__ProductRatePlanCharge__r.zqu__ProductRatePlan__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZRatePlan_Region__c</fullName>
        <formula>TEXT(zqu__ProductRatePlanCharge__r.zqu__ProductRatePlan__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZRatePlan_ZuoraId__c</fullName>
        <formula>zqu__ProductRatePlanCharge__r.zqu__ProductRatePlan__r.zqu__ZuoraId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZRatePlan_ZuoraId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Currency__c</fullName>
        <label>Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for soft deletion</description>
        <inlineHelpText>Flag for soft deletion</inlineHelpText>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__EndingUnit__c</fullName>
        <label>EndingUnit</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__IsOveragePrice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsOveragePrice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__PriceFormat__c</fullName>
        <description>Flat Fee vs. Per Unit</description>
        <inlineHelpText>Flat Fee vs. Per Unit</inlineHelpText>
        <label>Price Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlanChargeId__c</fullName>
        <label>ProductRatePlanChargeId</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlanCharge__c</fullName>
        <label>Product Rate Plan Charge</label>
        <referenceTo>zqu__ProductRatePlanCharge__c</referenceTo>
        <relationshipLabel>Product RatePlan Charge Tier</relationshipLabel>
        <relationshipName>Product_RatePlan_Charge_Tier</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zqu__StartingUnit__c</fullName>
        <label>StartingUnit</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Tier__c</fullName>
        <label>Tier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ZuoraId</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product RatePlan Charge Tier</label>
    <nameField>
        <label>Tier</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product RatePlan Charge Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>